# scriptsage

./: .gitignore  README.md  pyproject.toml
scripts/: converturl.sh
scriptsage/: scriptsage_cli.py
scriptsage/helpers/: Reservoir-Dogs-structured-old.json  Reservoir-Dogs-structured.json  Reservoir-Dogs.html  generate-viz.py  heatmap-viz.py  parse-dialogues.py  scraper.py  social_network_analysis.py
