[tool.poetry]
name = "scriptsage"
version = "0.1.0"
description = "Parse and evaluate scripts."
authors = ["James Campbell"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.13.2"
pandas = "^2.2.2"
pyvis = "^0.3.2"
selenium = "^4.22.0"
webdriver-manager = "^4.0.1"
jinja2 = "^3.1.4"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.12.3"
networkx = "^3.3"
matplotlib = "^3.9.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
